@@ -2,6 +2,7 @@ package hs.kr.backend.devpals.domain.evaluation.service;
 
 import hs.kr.backend.devpals.domain.evaluation.dto.EvaluationMemberResponse;
 import hs.kr.backend.devpals.domain.evaluation.dto.EvaluationRequest;
+import hs.kr.backend.devpals.domain.evaluation.dto.EvaluationResponse;
 import hs.kr.backend.devpals.domain.evaluation.entity.EvaluationEntity;
 import hs.kr.backend.devpals.domain.evaluation.repository.EvaluationRepository;
 import hs.kr.backend.devpals.domain.project.entity.ApplicantEntity;
@@ -14,6 +15,7 @@ import hs.kr.backend.devpals.global.exception.CustomException;
 import hs.kr.backend.devpals.global.exception.ErrorException;
 import hs.kr.backend.devpals.global.jwt.JwtTokenValidator;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -60,26 +62,34 @@ public class EvaluationService {
     }
 
     @Transactional(readOnly = true)
-    public ResponseEntity<ApiResponse<List<EvaluationMemberResponse>>> getProjectMembersWithEvaluationStatus(
+    public ResponseEntity<ApiResponse<EvaluationResponse>> getProjectMembersWithEvaluationStatus(
             String token, Long projectId) {
 
         Long evaluatorId = jwtTokenValidator.getUserId(token);
 
-        //프로젝트에 참여 중인 유저 리스트 조회
+        // 프로젝트 참여자 조회
         List<ApplicantEntity> acceptedApplicants = applicantRepository.findAllByProjectIdAndStatus(projectId, ApplicantStatus.ACCEPTED);
 
-        //평가 여부 판별
-        List<EvaluationMemberResponse> responseList = acceptedApplicants.stream()
+        // 프로젝트 이름은 참여자 중 아무거나에서 꺼냄
+        String projectName = acceptedApplicants.stream()
+                .findFirst()
+                .map(applicant -> applicant.getProject().getTitle())
+                .orElse("알 수 없는 프로젝트");
+
+        // evaluator 자신 제외 + 응답 생성
+        List<EvaluationMemberResponse> userData = acceptedApplicants.stream()
+                .filter(applicant -> !applicant.getUser().getId().equals(evaluatorId))
                 .map(applicant -> {
                     UserEntity user = applicant.getUser();
                     boolean isEvaluated = evaluationRepository.existsByProjectIdAndEvaluatorIdAndEvaluateeId(
                             projectId, evaluatorId, user.getId());
                     return EvaluationMemberResponse.of(user.getId(), user.getNickname(), isEvaluated);
                 })
-                .toList();
+                .collect(Collectors.toList());
 
-        return ResponseEntity.ok(new ApiResponse<>(true, "참여자 조회 성공", responseList));
+        EvaluationResponse response = EvaluationResponse.of(projectName, userData);
+
+        return ResponseEntity.ok(new ApiResponse<>(true, "참여자 조회 성공", response));
     }
-
 
 }
